--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve --host 0.0.0.0 --port 4300",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "i18n": "ng extract-i18n --output-path src/locale"
   },
   "private": true,
   "dependencies": {
@@ -16,11 +17,13 @@
     "@angular/compiler": "^18.1.2",
     "@angular/core": "^18.1.2",
     "@angular/forms": "^18.1.2",
+    "@angular/localize": "~18.1.2",
     "@angular/material": "^18.1.2",
     "@angular/platform-browser": "^18.1.2",
     "@angular/platform-browser-dynamic": "^18.1.2",
     "@angular/router": "^18.1.2",
     "@angular/service-worker": "^18.1.2",
+    "@formatjs/intl-durationformat": "^0.2.4",
     "dexie": "^4.0.8",
     "dexie-observable": "^4.0.1-beta.13",
     "rxjs": "~7.8.0",
