--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "i18n": "ng extract-i18n --output-path src/locale"
+    "i18n": "ng extract-i18n --output-path src/locale",
+    "postinstall": "patch-package"
   },
   "private": true,
   "dependencies": {
@@ -43,6 +44,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "patch-package": "^8.0.0",
     "typescript": "~5.4.5"
   }
 }
