--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^18.1.2",
     "@angular/compiler": "^18.1.2",
     "@angular/core": "^18.1.2",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.1.2",
     "@angular/localize": "~18.1.2",
     "@angular/material": "^18.1.2",
@@ -25,6 +26,7 @@
     "@angular/router": "^18.1.2",
     "@angular/service-worker": "^18.1.2",
     "@formatjs/intl-durationformat": "^0.2.4",
+    "@supabase/supabase-js": "^2.45.3",
     "dexie": "^4.0.8",
     "dexie-observable": "^4.0.1-beta.13",
     "peerjs": "^1.5.4",
