--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.15",
+    "@angular/animations": "^20.3.0",
     "@angular/cdk": "^18.1.2",
-    "@angular/common": "^19.2.15",
-    "@angular/compiler": "^19.2.15",
-    "@angular/core": "^19.2.15",
+    "@angular/common": "^20.3.0",
+    "@angular/compiler": "^20.3.0",
+    "@angular/core": "^20.3.0",
     "@angular/fire": "^18.0.1",
-    "@angular/forms": "^19.2.15",
-    "@angular/localize": "~19.2.15",
+    "@angular/forms": "^20.3.0",
+    "@angular/localize": "~20.3.0",
     "@angular/material": "^18.1.2",
-    "@angular/platform-browser": "^19.2.15",
-    "@angular/platform-browser-dynamic": "^19.2.15",
-    "@angular/router": "^19.2.15",
-    "@angular/service-worker": "^19.2.15",
+    "@angular/platform-browser": "^20.3.0",
+    "@angular/platform-browser-dynamic": "^20.3.0",
+    "@angular/router": "^20.3.0",
+    "@angular/service-worker": "^20.3.0",
     "@formatjs/intl-durationformat": "^0.2.4",
     "@supabase/supabase-js": "^2.45.3",
     "dexie": "^4.0.8",
@@ -39,14 +39,14 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.16",
-    "@angular/cli": "^19.2.16",
-    "@angular/compiler-cli": "^19.2.15",
+    "@angular/build": "^20.3.0",
+    "@angular/cli": "^20.3.0",
+    "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "patch-package": "^8.0.0",
